# Ticketing_Genie-Auth_Service

./: .env.example  Dockerfile  env.yaml  pyproject.toml  requirements.txt  ruff.toml
src/: main.py
src/api/middleware/: cors.py  error_handler.py
src/api/rest/: app.py  dependencies.py
src/api/rest/routes/: admin_router.py  auth_routes.py  health.py  internal_routers.py
src/config/: settings.py
src/constants/: __init__.py
src/core/exceptions/: base.py
src/core/services/: admin_service.py  auth_service.py  email_service.py  email_service_welcome.py  internal_service.py
src/data/clients/: postgres_client.py
src/data/models/postgres/: models.py
src/data/repositories/: admin_repository.py  internal_repository.py  password_reset_repository.py  revoke_token_repository.py  user_repository.py
src/observability/logging/: logger.py
src/schemas/: admin_schemas.py  auth_schemas.py
src/scripts/: admin_seeder.py  company_seeder.py  product_seeder.py  role_tier_seeder.py  subscription_seeder.py  user_seeder.py
src/utils/: jwt_utils.py  password_utils.py
