[project]
name = "auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg==0.29.0",
    "fastapi==0.115.0",
    "greenlet==3.1.1",
    "httpx==0.27.2",
    "passlib[bcrypt]==1.7.4",
    "pydantic[email]==2.9.2",
    "pydantic-settings==2.5.2",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.12",
    "redis==5.1.0",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.36",
    "structlog==24.4.0",
    "uuid6>=2025.0.1",
    "uvicorn[standard]==0.30.6",
    "ruff==0.6.9",
    "mypy==1.11.2",
    "aiosmtplib>=5.1.0",
    "pgvector>=0.4.2",
]
